<resources>
    <string name="app_name">CinemaApp</string>
    <string name="details">Детали</string>
    <string name="hollywood_title">Однажды в Голливуде</string>
    <string name="interstellar_title">Интерстеллар</string>
    <string name="title">Film name</string>
    <string name="back">Назад</string>
    <string name="film_description">Описание фильма</string>
    <string name="like">Нравится</string>
    <string name="comment">Введите комментарий</string>
    <string name="hint">Введите комментарий</string>
    <string name="save_comment_button_text">Сохранить</string>
    <string name="contact_friend">Пригласить друга</string>
    <string name="about_app">О приложении</string>
    <string name="main_display">Главный экран</string>
    <string name="nav_header_title">Cinematic</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="add_film">Добавить фильм</string>
    <string name="titleHint">Название фильма</string>
    <string name="descriptionHint">Описание</string>
    <string name="add_film_button_text">Сохранить</string>
    <string name="bottom_sheet_peek">Дополнительная информация</string>
    <string name="bottom_sheet_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="snackbar_back">Back</string>
    <string name="drawer_exit">Выход</string>
    <string name="exit_dialog_text">Вы хотите покинуть приложение?</string>
    <string name="exit_yes">Да</string>
    <string name="exit_no">Нет</string>
    <string name="genre">Жанр</string>
    <string name="producer">Режиссер</string>
    <string name="actor">Актер</string>
    <string name="add_to_prefs">Film added to preferences</string>
    <string name="not_add_to_prefs">Film not added to preferences</string>
    <string name="remarkableFilm">Is film remarkable</string>
    <string name="film_set_remarkable">Фильм добавлен в Избранное</string>
    <string name="film_set_not_remarkable">Фильм удален из Избранного</string>
    <string name="remarkable_films">Избранное</string>
    <string name="remove_remarkable_text">Удалить</string>
    <string name="about_info">Мобильное приложение о фильмах. Для некоммерческого использования.</string>
    <string name="author_info">Автор: Д.Кондов (dkondov@yandex.ru)</string>
    <string name="db_logo">movie db logo</string>
    <string name="db_movie_notice">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="title_activity_maps">Map</string>
    <string name="cinema_map">Ближайшие кинотеатры</string>
    <string name="channel_name">Cinema channel</string>
    <string name="channel_description">About popular cinema</string>
    <string name="notification_title">Cinema app</string>
    <string name="notification_text">Список фильмов обновлен</string>
</resources>
