<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/aboutApp"
            android:icon="@drawable/ic_about_app"
            android:title="@string/about_app" />

        <item
            android:id="@+id/mainDisplay"
            android:icon="@drawable/ic_star_border_black_24dp"
            android:title="@string/main_display" />

        <item
            android:id="@+id/remarkableFilms"
            android:icon="@drawable/ic_thumb_up_black_24dp"
            android:title="@string/remarkable_films" />

        <item
            android:id="@+id/cinemaMap"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/cinema_map" />

        <item
            android:id="@+id/drawer_exit"
            android:icon="@drawable/ic_close_black_24dp"
            android:title="@string/drawer_exit"/>
    </group>
</menu>