<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/dialog_padding">

    <TextView
        android:id="@+id/exit_dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_dialog_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/exit_yes"
        android:theme="@style/Theme.MaterialComponents.Light"
        android:backgroundTint="@color/colorPrimaryDark"
        app:icon="@drawable/ic_exit_yes_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exit_dialog_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_remain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/exit_no"
        android:theme="@style/Theme.MaterialComponents.Light"
        android:backgroundTint="@color/colorPrimaryDark"
        app:icon="@drawable/ic_exit_cancel_24dp"
        app:layout_constraintStart_toEndOf="@+id/dialog_exit"
        app:layout_constraintTop_toBottomOf="@+id/exit_dialog_text" />
</androidx.constraintlayout.widget.ConstraintLayout>