<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddFilmActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleInputLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_input_height"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:gravity="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|left"
            android:hint="@string/titleHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionInputLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_input_height"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/margin_24_dp"
        android:layout_marginEnd="@dimen/standard_margin"
        android:gravity="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|left"
            android:hint="@string/descriptionHint"
            android:inputType="textMultiLine"
            android:lines="10"
            android:maxLines="10"
            android:minLines="2"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveFilmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/margin_24_dp"
        android:text="@string/add_film_button_text"
        android:theme="@style/Theme.MaterialComponents.Light"
        android:backgroundTint="@color/colorPrimaryDark"
        app:icon="@drawable/ic_add_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>